--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,20 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
+  - title: "科学研究"
+    url: "/#-科学研究"
 
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "授权专利"
+    url: "/#-授权专利"
 
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "社会兼职"
+    url: "/#-社会兼职"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "招生信息"
+    url: "/#-招生信息"
 
   - title: "Internships"
     url: "/#-internships"
