--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,10 +12,10 @@ main:
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
 
-  - title: "Educations"
+  - title: "授权专利"
     url: "/#-educations"
 
-  - title: "Invited Talks"
+  - title: "社会兼职"
     url: "/#-invited-talks"
 
   - title: "Internships"
