--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "科学研究"             
     url: "/#scientific-research" 
     
-  - title: "论文发表"             
+  - title: "学术论文"             
     url: "/#publications"   
     
   - title: "授权专利"             
