--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "陈路"
-description              :  #"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+description              : "研究领域：机器人抓取、机器视觉、图像增强 "
 repository               : "wangshuou.github.io"
 google_scholar_stats_use_cdn : true
 
