--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "陈路"
-  avatar           : "images/android-chrome-512x512.png"
-  bio              : "Lorem ipsum College"
+  avatar           : "images/Picture.png"
+  bio              : "山西大学"
   location         : "山东聊城"
   employer         :
   pubmed           : 
