--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "About Me"
+  - title: "个人简介"                
     url: "/#about-me"
-
-  - title: "News"
-    url: "/#-news"
-
-  - title: "Publications"
-    url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
-
-  - title: "Educations"
-    url: "/#-educations"
-
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
-
-  - title: "Internships"
-    url: "/#-internships"
+    
+  - title: "科学研究"             
+    url: "/#scientific-research" 
+    
+  - title: "学术论文"             
+    url: "/#publications"   
+    
+  - title: "授权专利"             
+    url: "/#granted-patent"
+    
+  - title: "社会兼职"              
+    url: "/#part-time-social-positions"
+    
+  - title: "招生信息"             
+    url: "/#admission-information"        
